removed getLast()